--- a/css/viewer.css
+++ b/css/viewer.css
@@ -70,11 +70,12 @@ img.mark {
 .Header {
 	color: white;
     font-family: 'Noto Sans JP';
+    font-size: 18px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 30px;
+	height: 40px;
 	padding: 5px;
 	background-color: rgba(51, 51, 51, .85);
 	z-index: 3;
@@ -83,11 +84,13 @@ img.mark {
 .HeaderLeft {
 	left: 10px;
 	position: fixed;
+    margin-top: 3px;
 }
 
 .HeaderRight {
 	right: 10px;
 	position: fixed;
+    margin-top: 3px;
 }
 
 .chkbx {
@@ -197,7 +200,8 @@ img.stamp {
     left: 310px;
     position: fixed;
     font-size: 12px;
-    top: 10px;
+    top: 0px;
+    height: 50px;
     font-weight: bold;
     z-index: 9999;
 }
