--- a/css/viewer.css
+++ b/css/viewer.css
@@ -70,12 +70,11 @@ img.mark {
 .Header {
 	color: white;
     font-family: 'Noto Sans JP';
-    font-size: 18px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	padding: 5px;
 	background-color: rgba(51, 51, 51, .85);
 	z-index: 3;
@@ -84,13 +83,11 @@ img.mark {
 .HeaderLeft {
 	left: 10px;
 	position: fixed;
-    margin-top: 3px;
 }
 
 .HeaderRight {
 	right: 10px;
 	position: fixed;
-    margin-top: 3px;
 }
 
 .chkbx {
@@ -196,12 +193,21 @@ img.stamp {
     margin-bottom: -10px;
 }
 
+#versionArea {
+    z-index: 9999;
+    position: fixed;
+    bottom: 0px;
+    right: 3px;
+    font-size: 8px;
+    opacity: 0.5;
+    color: black;
+}
+
 .adArea {
     left: 310px;
     position: fixed;
     font-size: 12px;
-    top: 0px;
-    height: 50px;
+    top: 10px;
     font-weight: bold;
     z-index: 9999;
 }
