--- a/css/generator.css
+++ b/css/generator.css
@@ -5,6 +5,7 @@ img.mark {
 }
 
 .chat {
+    position: fixed;
     font-size: 60px;
     color: white;
     opacity: 0.8;
@@ -12,8 +13,7 @@ img.mark {
     font-weight: bold;
     white-space: nowrap;
     z-index: 4;
-    text-shadow: 1px 1px 2px #000;
-    position: fixed;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.43), -1px 1px 2px rgba(0, 0, 0, 0.43), 1px -1px 2px rgba(0, 0, 0, 0.43), -1px -1px 2px rgba(0, 0, 0, 0.43), 1px 0px 2px rgba(0, 0, 0, 0.43), 0px 1px 2px rgba(0, 0, 0, 0.43), -1px 0px 2px rgba(0, 0, 0, 0.43), 0px -1px 2px rgba(0, 0, 0, 0.43);
 }
 
 .versionArea {
