--- a/css/generator.css
+++ b/css/generator.css
@@ -6,7 +6,6 @@ img.mark {
 
 .chat {
     position: fixed;
-    font-size: 60px;
     color: white;
     opacity: 0.8;
     font-family: 'Noto Sans JP';
@@ -44,5 +43,5 @@ img.mark {
     color: white;
     font-size: 60px;
     z-index: 4;
-    text-shadow: 1px 1px 2px #000;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.43), -1px 1px 2px rgba(0, 0, 0, 0.43), 1px -1px 2px rgba(0, 0, 0, 0.43), -1px -1px 2px rgba(0, 0, 0, 0.43), 1px 0px 2px rgba(0, 0, 0, 0.43), 0px 1px 2px rgba(0, 0, 0, 0.43), -1px 0px 2px rgba(0, 0, 0, 0.43), 0px -1px 2px rgba(0, 0, 0, 0.43);
 }
